--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>SuperHero</title>
 </head>
 
 <body>
+
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand ml-5" href="#">
+            <img src="assets/img/favicon.ico" class="d-inline-block align-top" alt="ImagenBarra">
+            SuperHero
+        </a>
+    </nav>
+    <header class="container">
+        <img src="assets/img/sh1.jpg" class="mx-auto d-block" alt="ImagenCentral">
+    </header>
+    <section class="container">
+        <h1 class="text-center bg-light mb-0"> Encuentra tu SuperHero</h1>
+        <h4 class="lead text-center bg-blue mt-0 py-1">Ingresa el número del SuperHero a buscar</h4>
+    </section>
 
 
 
