--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>SuperHero</title>
 </head>
@@ -18,17 +19,33 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand ml-5" href="#">
-            <img src="assets/img/favicon.ico" class="d-inline-block align-top" alt="ImagenBarra">
+            <img src="assets/img/favicon.ico" class="d-inline-block align-top rounded-circle" alt="ImagenBarra">
             SuperHero
         </a>
     </nav>
     <header class="container">
-        <img src="assets/img/sh1.jpg" class="mx-auto d-block" alt="ImagenCentral">
+        <img src="assets/img/sh1.jpg" class="mx-auto d-block rounded-circle" alt="ImagenCentral">
     </header>
+
     <section class="container">
-        <h1 class="text-center bg-light mb-0"> Encuentra tu SuperHero</h1>
-        <h4 class="lead text-center bg-blue mt-0 py-1">Ingresa el número del SuperHero a buscar</h4>
+        <h1 class="text-center mb-0 mt-3"><span class="bg-light"> Encuentra tu SuperHero</span></h1>
     </section>
+
+    <section class="row align-items-center justify-content-center">
+        <div class="col-6">
+            <form>
+                <div class="form-group lead text-center mt-5 ">
+                    <label><span style=" font-family:comic neue; background-color:#301ca0; color: #e4f30c;"
+                            class="px-2 py-2 mb-0">Ingresa el número del SuperHero a buscar</span></label>
+                    <input type="text" class="form-control" id="buscarHero">
+                </div>
+                <div>
+                    <button type="submit" class="btn mt-0  px-0 py-0 mb-5"><img src="assets/img/Buscar.png" height="20%" width="30%"/></button>
+                </div>
+            </form>
+        </div>
+    </section>
+
 
 
 
