--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@
         <div class="col-6">
             <form>
                 <div class="form-group lead text-center mt-5 ">
-                    <label><span style=" font-family:comic neue; background-color:#301ca0; color: #e4f30c;"
+                    <label for="txtId"><span style=" font-family:comic neue; background-color:#301ca0; color: #e4f30c;"
                             class="px-2 py-2 mb-0">Ingresa el número del SuperHero a buscar</span></label>
-                    <input type="text" class="form-control" id="buscarHero">
+                    <input type="text" class="form-control" id="txtId">
                 </div>
                 <div>
-                    <button type="submit" class="btn mt-0  px-0 py-0 mb-5"><img src="assets/img/Buscar.png" height="20%" width="30%"/></button>
+                    <button id="btnBuscar" type="submit" class="btn mt-0  px-0 py-0 mb-5"><img src="assets/img/Buscar.png" height="20%" width="30%"/></button>
                 </div>
             </form>
+        </div>
+    </section>
+
+    <section>
+        <div class="row">
+            <div class="col-12 col-sm-6" id="nombreHero"></div>
+            <div class="col-12 col-sm-6"></div>
         </div>
     </section>
 
