--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <input type="text" class="form-control" id="txtId">
                 </div>
                 <div>
-                    <button id="btnBuscar" type="submit" class="btn mt-0  px-0 py-0 mb-5"><img src="assets/img/Buscar.png" height="20%" width="30%"/></button>
+                    <button id="btnBuscar" type="submit" class="btn mt-0  px-0 py-0 mb-5"><img
+                            src="assets/img/Buscar.png" height="20%" width="30%" /></button>
                 </div>
             </form>
         </div>
@@ -49,7 +50,7 @@
     <section>
         <div class="row">
             <div class="col-12 col-sm-6" id="nombreHero"></div>
-            <div class="col-12 col-sm-6"></div>
+            <div class="col-12 col-sm-6" id="chartContainer" style="height: 300px; width: 100%;"></div>
         </div>
     </section>
 
@@ -65,6 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
+        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
