--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
     </section>
 
-    <section>
+    <section class="container">
         <div class="row">
-            <div class="col-12 col-sm-6" id="nombreHero"></div>
-            <div class="col-12 col-sm-6" id="chartContainer" style="height: 300px; width: 100%;"></div>
+            <div class="col-12 col-sm-7"  id="nombreHero"></div>
+            <div class="col-12 col-sm-5 ml-0 pl-0" id="chartContainer" style="height: 300px; width: 100%;"></div>
         </div>
     </section>
 
@@ -66,7 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
-        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
