--- a/index.html
+++ b/index.html
@@ -31,25 +31,28 @@
         <h1 class="text-center mb-0 mt-3"><span class="bg-light"> Encuentra tu SuperHero</span></h1>
     </section>
 
-    <section class="row align-items-center justify-content-center">
-        <div class="col-6">
-            <form>
-                <div class="form-group lead text-center mt-5 ">
-                    <label for="txtId"><span style=" font-family:comic neue; background-color:#301ca0; color: #e4f30c;"
-                            class="px-2 py-2 mb-0">Ingresa el número del SuperHero a buscar</span></label>
-                    <input type="text" class="form-control" id="txtId">
-                </div>
-                <div>
-                    <button id="btnBuscar" type="submit" class="btn mt-0  px-0 py-0 mb-5"><img
-                            src="assets/img/Buscar.png" height="20%" width="30%" /></button>
-                </div>
-            </form>
+    <section class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <form>
+                    <div class="form-group lead text-center mt-5 ">
+                        <label for="txtId"><span
+                                style=" font-family:comic neue; background-color:#301ca0; color: #e4f30c;"
+                                class="px-2 py-2 mb-0">Ingresa el número del SuperHero a buscar</span></label>
+                        <input type="text" class="form-control" id="txtId">
+                    </div>
+                    <div>
+                        <button id="btnBuscar" type="submit" class="btn mt-0  px-0 py-0 mb-5"><img
+                                src="assets/img/Buscar.png" height="20%" width="30%" /></button>
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
 
     <section class="container">
         <div class="row">
-            <div class="col-12 col-sm-7"  id="nombreHero"></div>
+            <div class="col-12 col-sm-7" id="nombreHero"></div>
             <div class="col-12 col-sm-5 ml-0 pl-0" id="chartContainer" style="height: 300px; width: 100%;"></div>
         </div>
     </section>
