--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-
+    <!-- BARRA DE NAVEGACIÓN -->
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand ml-5" href="#">
             <img src="assets/img/favicon.ico" class="d-inline-block align-top rounded-circle" alt="ImagenBarra">
@@ -27,10 +28,12 @@
         <img src="assets/img/sh1.jpg" class="mx-auto d-block rounded-circle" alt="ImagenCentral">
     </header>
 
+    <!-- TÍTULO -->
     <section class="container">
         <h1 class="text-center mb-0 mt-3"><span class="bg-light"> Encuentra tu SuperHero</span></h1>
     </section>
 
+    <!-- FORMULARIO PARA BUSQUEDA DE SUPERHERO -->
     <section class="container">
         <div class="row justify-content-center">
             <div class="col-6">
@@ -50,17 +53,15 @@
         </div>
     </section>
 
+    <!-- TARJETA Y GRÁFICO CON INFORMACIÓN DE SUPER HÉROES -->
     <section class="container">
         <div class="row">
             <div class="col-12 col-sm-7" id="nombreHero"></div>
-            <div class="col-12 col-sm-5 ml-0 pl-0" id="chartContainer" style="height: 300px; width: 100%;"></div>
+            <div class="col-12 col-sm-5" id="chartContainer" style="height: 300px; width: 100%;"></div>
         </div>
     </section>
 
-
-
-
-
+    <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
